assets/scss/common/_custom.scss
/* ... */
.links.publish:before {
  content: "\f570";
}

.links.studentthesis:before {
  content: "\f02d";
}

.links.award {
  background-color: indianred;
}

.links.award:before {
  content: "\f091";
  padding-bottom: 0px;
  padding-top: 0px;
}

.links:hover {
  border: 1.5px solid #6d7993;
  background-color: white;
}

.links.award:hover {
  border: 1.5px solid indianred;
  background-color: white;
  color: indianred !important;
}

/* pubs css */
.pubs_title {
  text-decoration: none !important;
  border: none;
  font-size: 130%;
}

.pubs_authors {
  font-size: 115%;
  font-style: italic;
}

.pubs_type {
  font-size: 110%;
  color: #526873;
}

.no-decoration {
  text-decoration: none !important;
  border: none;
  color: inherit;
}

/* overlap */

.pubs-img-container {
  padding-top: 1em;
  padding-right: 1.1em;
  margin-right: 1em;
  width: 10vw;
  min-width: 120px;
}

.pubs_img {
  border-style: solid !important;
  border-width: 1px !important;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: auto;
  max-width: 200px;
}

.highlighted-conference {
  background-color: #e2fdff; /* Light-blue highlight; adjust as needed */
  padding: 0.2rem 0.4rem;
  border-radius: 2px;
  font-weight:bolder;
  border-style:solid;
  border-width: 1px;
  border-color: #5ec1d0;
  text-decoration: whitesmoke;
}

.highlighted-award {
  background-color: #f1e2ff; /* Light-blue highlight; adjust as needed */
  padding: 0.2rem 0.4rem;
  border-radius: 2px;
  font-weight:bolder;
  border-style:ridge;
  border-width: 1px;
  border-color: #b060df;
  text-decoration: whitesmoke;
}

.highlighted-award::before {
  content: '\1F3C6'; /* Unicode for trophy emoji */
  display: inline-block;
  margin-right: 0.5rem; /* Adjust spacing between icon and text */
}

.pub-btn {
  margin-right: .2em;
}

.badges-img {
  width: 40%;
  min-width: 40px;
  display: flex;
}

.badges-img img {
  max-width: 100%;
  max-height: 100%;
  margin: auto;
  margin-top: 5px;
  padding: 5px;
}

.image-holder {
  float: left;
  width: 80%;
  vertical-align: middle;
}

.pub-text {
  padding-top: 2em;
}

.resource {
  padding-top: 1em;
  padding-bottom: 1em;
}

.resource.atlas {
  background-color: #F6FFFF;
}

.resource.speedchecker {
  background-color: #FFF9F6;
}

.fig {
  padding: .5em;
}

figcaption {
  text-align: center;
}

.resource-img {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 70%;
}

.resource-img-med {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.resource-img-large {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.caption {
  /*    border: 1px dotted blue;*/
  text-align: center;
  color: #6d7993;
}

.container {
  display: grid;
  width: 100%;
  height: auto;
  justify-items: center;
}

.constrain-image {
  max-width: 100% !important;
  height: auto !important;
}
.constrain-image svg {
  width: 100% !important;
  height: auto !important;
}

@include color-mode(dark) {
  td {
    background-color: $body-bg-dark !important;
    color: $body-color-dark !important;
  }
}

// blog image sizing
.image-container {
  display: flex;
  gap: 20px;
  flex-wrap: wrap;
}

.image-item {
  flex: 1 1 calc(33.333% - 20px); /* Adjusts to one-third width minus the gap */
}

.image-item img {
  width: 100%;
  height: auto;
}

@media (max-width: 600px) {
  .image-item {
    flex: 1 1 100%; /* Stacks images vertically on smaller screens */
  }
}

